# caii

./: .gitignore  CLAUDE.md  README.md  TODO.md
.claude/: DA.md  (+2 more)
.claude/orchestration/: CLAUDE.md  Makefile  __init__.py  entry.py  entry_base.py  flow_continue.py  flow_invoker.py  flow_registry.py  pyproject.toml  utils.py
.claude/orchestration/agent_chain/: CLAUDE.md  __init__.py  dynamic.py  flow.py  invoker.py  memory.py  orchestrator.py  state.py
.claude/orchestration/agents/: CLAUDE.md  __init__.py  base.py  complete.py  config.py  entry.py
.claude/orchestration/content/: complexity_assessment.md
.claude/orchestration/decompose/: CLAUDE.md  __init__.py  complete.py  entry.py  flows.py
.claude/orchestration/decompose/content/: decompose_phase.md
.claude/orchestration/decompose/content/aggregation/: synthesis.md
.claude/orchestration/decompose/content/decompose/: analysis.md  clarification.md  synthesis.md  validation.md
.claude/orchestration/inner_loop/: CLAUDE.md  __init__.py
.claude/orchestration/inner_loop/execute/: CLAUDE.md  __init__.py  entry.py
.claude/orchestration/inner_loop/execute/content/: execute_phase.md
.claude/orchestration/inner_loop/learn/: CLAUDE.md  __init__.py  entry.py
.claude/orchestration/inner_loop/learn/content/: learn_phase.md
.claude/orchestration/inner_loop/observe/: CLAUDE.md  __init__.py  entry.py
.claude/orchestration/inner_loop/observe/content/: observe_phase.md
.claude/orchestration/inner_loop/plan/: CLAUDE.md  __init__.py  entry.py
.claude/orchestration/inner_loop/plan/content/: plan_phase.md
.claude/orchestration/inner_loop/think/: CLAUDE.md  __init__.py  entry.py
.claude/orchestration/inner_loop/think/content/: think_phase.md
.claude/orchestration/johari/: CLAUDE.md  __init__.py  entry.py  protocol.md
.claude/orchestration/outer_loop/: CLAUDE.md  __init__.py
.claude/orchestration/outer_loop/gather/: CLAUDE.md  __init__.py  domain_classifier.py  entry.py  flows.py
.claude/orchestration/outer_loop/gather/content/: gather_phase.md
.claude/orchestration/outer_loop/ideal_state/: CLAUDE.md  __init__.py  entry.py
.claude/orchestration/outer_loop/ideal_state/content/: ideal_state_capture.md
.claude/orchestration/outer_loop/interview/: __init__.py  completeness_scorer.py  entry.py  flows.py
.claude/orchestration/outer_loop/verify/: CLAUDE.md  __init__.py  entry.py  feedback_generator.py  flows.py  question_aggregator.py  verification_engine.py
.claude/orchestration/outer_loop/verify/content/: verification.md
.claude/orchestration/protocols/agent/: CLAUDE.md
.claude/orchestration/protocols/agent/common/: complete.py  entry.py
.claude/orchestration/protocols/agent/config/: config.py
.claude/orchestration/protocols/agent/steps/: base.py
.claude/orchestration/protocols/execution/: CLAUDE.md  __init__.py
.claude/orchestration/protocols/reasoning/: CLAUDE.md  complete.py  entry.py
.claude/orchestration/protocols/skill/: CLAUDE.md  clarification_handler.py  completion_signals.py  episode_store_helper.py  ideal_state_verifier.py  learning_trigger.py  memory_validator.py
.claude/orchestration/protocols/tests/: test_entry_points.py
.claude/orchestration/shared/protocols/: johari.md
.claude/orchestration/skills/: __init__.py
.claude/orchestration/skills/perform_tdd/: CLAUDE.md  __init__.py  advance.py  complete.py  entry.py  flows.py  tdd_state.py
.claude/orchestration/skills/scaffold_docs/: CLAUDE.md  __init__.py  detector.py  entry.py  flows.py  language_defaults.py  scaffold_docs_state.py
.claude/orchestration/skills/tdd/: CLAUDE.md  __init__.py  advance.py  complete.py  entry.py  tdd_state.py
.claude/orchestration/tests/: __init__.py  conftest.py
.claude/orchestration/tests/e2e/: __init__.py  test_complete_workflow.py  test_error_handling.py
.claude/orchestration/tests/integration/: __init__.py
.claude/orchestration/tests/unit/: __init__.py
(+280 files in other folders)
