[project]
name = "caii-orchestration"
version = "0.1.0"
description = "Python orchestration for CAII cognitive architecture"
requires-python = ">=3.11"
readme = "CLAUDE.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "pytest-mock>=3.12.0",
    "black>=24.1.0",
    "pylint>=3.0.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --tb=short"
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (component interaction)",
    "e2e: End-to-end tests (full workflow)",
    "slow: Slow-running tests",
    "fsm: Finite state machine tests",
    "critical: Critical functionality tests",
]

[tool.black]
line-length = 88
target-version = ["py311"]
exclude = '''
/(
    \.venv
    | __pycache__
    | \.git
)/
'''

[tool.pylint.main]
ignore = [".venv", "__pycache__"]
py-version = "3.11"

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-few-public-methods",
    # Bootstrap pattern requires imports after sys.path modification
    "wrong-import-position",
    # Lazy imports to avoid circular dependencies
    "import-outside-toplevel",
    # Flow registry pattern requires global state
    "global-statement",
    # Duplicate code in flows is intentional (declarative pattern)
    "duplicate-code",
]

[tool.pylint.design]
# State/config classes need more attributes
max-attributes = 12
# Builder functions need more arguments (invoker.build_agent_invocation_directive)
max-args = 12
# Flow handlers need more positional args
max-positional-arguments = 12
# Complex entry points need more locals
max-locals = 18
# Complex main functions need more statements
max-statements = 75
# Complex entry points need more branches
max-branches = 18
# State classes have many methods
max-public-methods = 30

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
exclude = [".venv"]
